@@ -122,6 +122,7 @@ FolderWindowToolbar.ReplyAll.ToolTip=Reply to All
 FolderWindowToolbar.Delete.ToolTip=Delete Message
 FolderWindowToolbar.SelectAll.ToolTip=Select All
 FolderWindowToolbar.Print.ToolTip=Print Message
+FolderWindowToolbar.Update.ToolTip=Get New Messages
 FolderWindowToolbar.Search.ToolTip=Search Folder
 
 OutboxWindowToolbar.Down.ToolTip=Next Message
@@ -155,6 +156,7 @@ MessageWindowToolbar.Detach.ToolTip=Attach/Detach Window
 FolderNode.popupMenu.Open.Label=Open Folder
 FolderNode.popupMenu.Close.Label=Close Folder
 FolderNode.popupMenu.New.Label=New Folder
+FolderNode.popupMenu.Update.Label=Get New Messages
 FolderNode.popupMenu.Edit.Label=Edit Properties
 
 StoreNode.popupMenu.Open.Label=Open Store
