@@ -1,6 +1,3 @@
-*) fix it so the file (and font and so forth?) editor actually includes
-	the '...' icon.
-
 *) a nested message which is of type text/html doesn't get shown on the
 	display.
 
@@ -9,8 +6,11 @@
 *) make an option where message windows size to the viewport of the
 desktop pane.
 
-*) make sure that changes to the user's sentfolder (and other properties)
-	get updated without a restart.
+*) search results window shows all (? at least lots) messages as unread.
+
+*) fix the right click/menu click problem; test on windows.
+
+--
 
 *) queuing of outgoing mails
 	todo on this:
@@ -32,8 +32,6 @@ desktop pane.
 	that makes it obvious that _something's_ going on.
 
 *) make search window look different than normal window.
-
-*) search results window shows all (? at least lots) messages as unread.
 
 	-- disconnect imap --
 
@@ -67,6 +65,9 @@ have nothing new in your inbox because it hasn't been d/l'ed yet.
 
 *) make the NewAccountPooka make a more fully-featured account; i.e. allow
 	for laptop configurations, sent folder configuration, etc.
+
+*) get rid of the Edit button for the Variable setting.  make it a separate
+	pane instead or something.
 
 +++++++
 
@@ -168,6 +169,8 @@ use it--or at least so it doesn't matter if it does.  -- only on unix.
 
 *) make a way to edit the mailcap bindings other than just the 'make default'
 option.
+
+*) multi-deleted throw a NPE
 
 *) currently, we only really support a signature file, though the ability
 is there to do all kinds of signature generators.  implement support for
